--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -123,7 +123,7 @@ header {
 
 .nav-right-login>a:not(:first-child)>button {
      margin-left: 5px;
-     background: #ab1111;
+     background:rgb(23, 80, 236);
      color: white;
 }
 
