--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap');
 
 * {
      margin: 0;
@@ -25,10 +26,11 @@ html::-webkit-scrollbar-track {
 }
 
 html::-webkit-scrollbar-thumb {
+     border-radius: 8px;
      background: #ab1111;
 }
 
-#main {
+#home {
      width: 100%;
      height: 100vh;
 
@@ -42,7 +44,7 @@ html::-webkit-scrollbar-thumb {
      margin: auto;
 }
 
-#main-left {
+#home-left {
      width: 40%;
      /* border: 2px solid blue; */
      display: flex;
@@ -91,7 +93,7 @@ html::-webkit-scrollbar-thumb {
 
 /* /* ! main right */
 
-#main-right {
+#home-right {
      width: 60%;
      /* border: 2px solid red; */
      position: relative;
@@ -136,7 +138,6 @@ html::-webkit-scrollbar-thumb {
      /* border: 1px solid red; */
      margin: auto;
      position: relative;
-     /* height: 500px; */
      margin-top: 30px;
      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -157,7 +158,7 @@ html::-webkit-scrollbar-thumb {
      display: flex;
      justify-content: space-between;
      position: relative;
-     /* align-items: center; */
+     height: 80vh
 }
 
 .form-container {
@@ -317,35 +318,35 @@ a {
      display: flex;
      align-items: center;
      justify-content: center;
-     /* flex-direction: column; */
 }
 
 .arrow-services img {
      transform: rotate(-90deg);
      width: 25%;
-     /* height: 100%; */
 }
 
 
 .parking-gif {
      width: 40%;
      display: flex;
-     /* justify-content: flex-end; */
+     justify-content: center;
+     align-items: center;
 }
 
 .parking-gif img {
      border-radius: 25px;
      width: 100%;
-     height: inherit;
 }
 
 
 /* * -----------Parking----------- */
 
 #parking {
+     width: 100%;
+     height: 85vh;
      padding: 5px;
-     /* border: 1px solid red; */
      display: flex;
+     align-items: center;
      position: relative;
      margin-top: 30px;
 }
@@ -404,7 +405,6 @@ a {
      padding: 5px;
      display: flex;
      justify-content: center;
-     /* border: 1px solid black */
 }
 
 
@@ -414,7 +414,6 @@ a {
      padding: 5px;
      margin: 5px;
      margin-left: 20px;
-     /* border: 1px solid blue; */
 }
 
 .slot {
@@ -423,9 +422,6 @@ a {
      margin-top: 10px;
      transition: 800ms;
      display: flex;
-     /* border-top: 2px solid #ab1111;
-     border-bottom: 2px solid #ab1111;
-     border-left: 2px solid #ab1111; */
      justify-content: center;
      border-top-left-radius: 10px;
      border-bottom-left-radius: 10px;
@@ -454,8 +450,11 @@ a {
      background-position: center;
      background-size: cover;
      padding: 20px;
+     position: relative;
      border-radius: 15px;
      box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px 0px 1px 0px inset;
+     border-top: 15px dotted #ffff; */
 }
 
 
@@ -534,6 +533,33 @@ a {
 }
 
 
+#paid {
+     width: 100%;
+     display: flex;
+     position: absolute;
+     top: 40px;
+     left: 0;
+     align-items: center;
+     justify-content: center;
+     display: none;
+}
+
+@keyframes paid {
+     0% {
+          width: 150%;
+     }
+
+     100% {
+          width: 70%;
+     }
+}
+
+#paid img {
+     width: 70%;
+     opacity: .5;
+     animation: paid 1s linear;
+}
+
 
 /* ! About */
 
@@ -598,4 +624,110 @@ a {
 .about-container2 .about-right img {
      width: 100%;
 
+}
+
+
+
+/* Contact Us */
+#ContactUs {
+     width: 95%;
+     height: 80vh;
+     margin: 65px auto;
+     position: relative;
+}
+
+#ContactUs h1 {
+     text-align: center;
+     font-size: 30px;
+     color: #df2626;
+}
+
+
+.message-img {
+     width: 50%;
+
+}
+
+.message-img img {
+     width: 80%;
+}
+
+#contactForm {
+     width: 50%;
+
+}
+
+#contactForm .input {
+     width: 100%;
+}
+
+#contactForm .input input, textarea {
+     width: 100%;
+     font-family: 'Noto Sans Mono', monospace;
+     padding: 6px 13px;
+     margin-top: 10px;
+     border-radius: 5px;
+     outline: none;
+     border: 1px solid #aaa;
+     font-size: 16px;
+     color: black
+}
+
+#contactForm .input input:focus, textarea:focus {
+     background: rgb(230, 229, 229);
+}
+
+#contactForm .btn {
+     width: 100%;
+     text-align: right;
+}
+
+#contactForm input[type="button"] {
+     width: fit-content;
+     cursor: pointer;
+     background: rgb(35, 86, 228);
+     color: white;
+
+}
+
+#contact-main {
+     width: 100%;
+     height: 100%;
+     display: flex;
+     align-items: center;
+}
+
+
+
+
+
+
+
+
+/* Footer */
+
+
+footer {
+     width: 100%;
+     color: white;
+     padding: 10px 40px;
+     background: #0a0103;
+     display: flex;
+     font-size: 14px;
+}
+
+.lower-row {
+     width: 100%;
+     display: flex;
+     justify-content: space-between;
+     color: #aaa;
+}
+
+.copyright+div {
+     color: #aaa;
+}
+
+.copyright+div:hover {
+     text-decoration: underline;
+     cursor: pointer;
 }
