--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -134,6 +134,11 @@ header {
      justify-content: flex-end;
 }
 
+.nav-right-login img {
+     width: 30%;
+}
+
+/* 
 .nav-right-login>a>button {
      width: 100px;
      letter-spacing: 1px;
@@ -149,7 +154,7 @@ header {
 }
 
 .nav-right-login>a:not(:first-child)>button {
-     margin-left: 5px;
+     padding-left: 5px;
      background: rgb(23, 80, 236);
      color: white;
 }
@@ -157,7 +162,7 @@ header {
 .nav-right-login>a>button:hover {
      background: rgb(233, 231, 229);
 
-}
+} */
 
 .nav-right-login>a:not(:first-child)>button:hover {
      background: #d32e2e;
