--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -22,7 +22,6 @@ header {
      margin: auto;
      justify-content: space-between;
      align-items: center;
-     /* border-bottom: 1px solid red; */
      position: relative;
 }
 
@@ -109,6 +108,8 @@ header {
      letter-spacing: 1.2px;
      font-size: 1.2rem;
      padding: 8px 5px;
+     white-space: nowrap;
+     transition: 600ms;
 }
 
 .nav-link ul a li::after {
